# team-finder-ad

./: .env.example  .gitignore  Caddyfile  Dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
apps/projects/: __init__.py  admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/projects/fixtures/: skills.json
apps/projects/migrations/: 0001_initial.py  0002_alter_project_created_at_alter_project_description_and_more.py
apps/users/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_alter_user_about_alter_user_avatar_alter_user_email_and_more.py
frontend/: .env.example  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  frontend.tsx  index.css  index.html  index.ts
frontend/src/components/: Header.tsx  Modal.tsx  ProjectCard.tsx  SkillBadge.tsx  SkillsInput.tsx
frontend/src/components/icons/: Github.tsx
frontend/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/views/: Login.tsx  ProjectDetails.tsx  ProjectList.tsx  Register.tsx  UserList.tsx  UserProfile.tsx
frontend/styles/: globals.css
team_finder/: settings.py  urls.py
templates_var3/: base.html
templates_var3/includes/: header.html
