[project]
name = "team-finder-ad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2.4",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
