[project]
name = "team-finder-ad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2.4",
    "django-types>=0.24.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "sqlparse==0.5.3",
    "types-pillow>=10.2.0.20240822",
    "tzdata==2025.2",
]

[tool.basedpyright]
typeCheckingMode = "basic"
# Disable overly strict rules that complain about Django's dynamic nature
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportMissingParameterType = false
reportExplicitAny = false
reportAny = false
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true

